--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name=".KnewsApp"
         android:theme="@style/Theme.Knews" >
         <activity android:name=".MainActivity" >
             <intent-filter>
