--- a/gradle.properties
+++ b/gradle.properties
@@ -16,4 +16,5 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
 # Kotlin code style for this project: "official" or "obsolete":
+API_KEY = "ba58c6bfa5c948a4a44cf21ae1d3cf66"
 kotlin.code.style=official
