--- a/NewsFeed/build.gradle
+++ b/NewsFeed/build.gradle
@@ -45,7 +45,7 @@ android {
 
 dependencies {
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation(AndroidX.coreKtx)
     implementation(AndroidX.navigationUiKtx)
     implementation(AndroidX.navigationFragmentKtx)
@@ -82,6 +82,8 @@ dependencies {
     implementation(Network.okhttp)
     implementation(Network.retrofit)
     implementation(Network.retrofitMoshi)
+    implementation(Network.googleGson)
+    implementation(Network.retrofitConverter)
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     kapt(AnnotationProcessor.moshi)
 
